--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <p class="hero-description">FarmconnectKE bridges the gap between local farmers and conscious consumers, bringing fresh, sustainable produce straight from Kenyan farms to your doorstep.</p>
                 <div class="hero-buttons">
                     <a href="#" class="btn btn-hero-primary">Shop Fresh Produce</a>
-                    <a href="#" class="btn btn-hero-secondary">Become a Farmer Partner</a>
+                    <a href="farmers-sign.html" class="btn btn-hero-secondary">Become a Farmer Partner</a>
                 </div>
                 <div class="hero-stats">
                     <div class="stat">
