added respnsiveness to the farmers form

--- a/farmers-sign.html
+++ b/farmers-sign.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FarmconnectKE - Authentication</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="farmers-sign.html">
+    <link rel="stylesheet" href="farmers-sign.css">
 </head>
 <body>
     <div class="auth-container">
@@ -90,6 +90,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="farmers-sign.js"></script>
 </body>
 </html>
