--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </h1>
                 <p class="hero-description">FarmconnectKE bridges the gap between local farmers and conscious consumers, bringing fresh, sustainable produce straight from Kenyan farms to your doorstep.</p>
                 <div class="hero-buttons">
-                    <a href="#" class="btn btn-hero-primary">Shop Fresh Produce</a>
+                    <a href="shop.html" class="btn btn-hero-primary">Shop Fresh Produce</a>
                     <a href="farmers-sign.html" class="btn btn-hero-secondary">Become a Farmer Partner</a>
                 </div>
                 <div class="hero-stats">
